// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportExportDialogFactory getReportExportDialogForAssessment expected properties are set 1`] = `
<ReportExportComponent
  afterDialogDismissed={[Function]}
  deps={
    {
      "assessmentActionMessageCreator": [typemoq mock object],
      "detailsViewActionMessageCreator": [typemoq mock object],
      "getCurrentDate": [Function],
      "getDateFromTimestamp": [Function],
      "reportExportServiceProvider": [typemoq mock object],
      "reportGenerator": [typemoq mock object],
    }
  }
  dismissExportDialog={[Function]}
  exportResultsClickedTelemetry={[Function]}
  featureFlagStoreData={{}}
  getExportDescription={[Function]}
  htmlGenerator={[Function]}
  isOpen={true}
  jsonGenerator={[Function]}
  pageTitle="command-bar-test-tab-title"
  reportExportFormat="Assessment"
  reportExportServices={
    [
      {
        "generateMenuItem": null,
        "key": "html",
      },
      {
        "generateMenuItem": null,
        "key": "json",
      },
      {
        "generateMenuItem": null,
        "key": "codepen",
      },
    ]
  }
  scanDate={2021-02-07T05:02:00.000Z}
  updatePersistedDescription={[Function]}
/>
`;

exports[`ReportExportDialogFactory getReportExportDialogForFastPass expected properties are set 1`] = `
<ReportExportComponent
  afterDialogDismissed={[Function]}
  deps={
    {
      "assessmentActionMessageCreator": [typemoq mock object],
      "detailsViewActionMessageCreator": [typemoq mock object],
      "getCurrentDate": [Function],
      "getDateFromTimestamp": [Function],
      "reportExportServiceProvider": [typemoq mock object],
      "reportGenerator": [typemoq mock object],
    }
  }
  dismissExportDialog={[Function]}
  exportResultsClickedTelemetry={[Function]}
  featureFlagStoreData={{}}
  getExportDescription={[Function]}
  htmlGenerator={[Function]}
  isOpen={true}
  jsonGenerator={[Function]}
  pageTitle="command-bar-test-tab-title"
  reportExportFormat="FastPass"
  reportExportServices={
    [
      {
        "generateMenuItem": null,
        "key": "html",
      },
      {
        "generateMenuItem": null,
        "key": "codepen",
      },
    ]
  }
  scanDate={2019-03-12T09:00:00.000Z}
  updatePersistedDescription={[Function]}
/>
`;
